Add navigation page with Facebook link and phone number button

--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
           <!-- <h1 id="restaurantname">Los Mochis <br> Mexican Restaurant</h1> -->
           <img class="img-responsive" id ="toplogo" src="images/Logo.jpg" width="300" height= "100" style="border: 0">
         </a>
-      </div>
+      
 
-      <div class="container">
-        <div id="facebook" class="" href="https://www.facebook.com/Losmochiscommerce/"><a class="fa fa-facebook"></a></div>
+      
+        <a id="facebook" class="" href="https://www.facebook.com/Losmochiscommerce/"  target="_blank"><i class="fa fa-facebook"></i></a>
 
-        <div id="callbutton">
+
+         <div id="callbutton">
         <a class="btn" href="tel:903-886-8200">
         <span class="glyphicon glyphicon-earphone"></span>
-        CALL (903) 886-8200
+        Call (903) 886-8200
       </a>
-    </div>
+      </div>
+   </div>
 
        <!--  <div id="phonenumber">903-886-8200</div> -->
       </div>
